--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "crypto-js": "^4.2.0",
         "date-fns": "^4.1.0",
         "domhandler": "^5.0.3",
+        "i18next": "^25.3.2",
+        "i18next-browser-languagedetector": "^8.2.0",
         "lucide-react": "^0.483.0",
         "preact": "^10.26.6",
         "react": "^19.0.0",
