--- a/config.example.json
+++ b/config.example.json
@@ -3,6 +3,8 @@
     "version": "1.0.0",
     "homepageUrl": "https://movietimecode.mrgarest.com",
     "baseUrl": "http://localhost",
+    "privacyPolicyUrl": "https://movietimecode.mrgarest.com/privacy",
+    "telegramChannelUrl": "https://t.me/+B-6MNbF-t6cyZDVi",
     "hostPermissions": {
         "caesura": []
     }
