--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-switch": "^1.1.3",
         "@types/chrome": "^0.0.310",
+        "@types/file-saver": "^2.0.7",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "crypto-js": "^4.2.0",
         "date-fns": "^4.1.0",
         "domhandler": "^5.0.3",
+        "file-saver": "^2.0.5",
         "i18next": "^25.3.2",
         "i18next-browser-languagedetector": "^8.2.0",
         "lucide-react": "^0.483.0",
