--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Movie Timecode"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -7,9 +7,9 @@ APP_URL=http://localhost
 EXTENSION_URL="https://chromewebstore.google.com/detail/oicfghfgplgplodmidellkbfoachacjb?utm_source=movietimecode"
 
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=uk
+APP_FALLBACK_LOCALE=uk
+APP_FAKER_LOCALE=uk_UA
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -23,14 +23,14 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=
 DB_USERNAME=root
 DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -40,7 +40,7 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=file
 CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
@@ -75,3 +75,6 @@ TWITCH_REDIRECT_URI=http://localhost/auth/callback/twitch
 
 TELEGRAM_BOT_TOKEN=null
 TELEGRAM_CHANNEL_ID=null
+
+PASSPORT_PRIVATE_KEY=
+PASSPORT_PUBLIC_KEY=
