--- a/server/composer.json
+++ b/server/composer.json
@@ -12,9 +12,11 @@
         "laravel/sanctum": "^4.0",
         "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.9",
-        "mrgarest/echo-api": "^1.0"
+        "mrgarest/echo-api": "^1.0",
+        "predis/predis": "^3.3"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.6",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
