--- a/server/package.json
+++ b/server/package.json
@@ -19,19 +19,29 @@
         "vite": "^7.2.7"
     },
     "dependencies": {
+        "@radix-ui/react-alert-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-select": "^2.2.6",
+        "@radix-ui/react-slot": "^1.2.4",
         "@tailwindcss/vite": "^4.1.17",
+        "@tanstack/react-query": "^5.90.16",
+        "@types/js-cookie": "^3.0.6",
+        "@types/luxon": "^3.7.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "hamburger-react": "^2.5.2",
         "i18next": "^25.7.2",
         "i18next-browser-languagedetector": "^8.2.0",
+        "js-cookie": "^3.0.5",
         "lucide-react": "^0.556.0",
+        "luxon": "^3.7.2",
         "react": "^19.2.1",
         "react-dom": "^19.2.1",
         "react-i18next": "^16.4.0",
+        "react-intersection-observer": "^10.0.0",
         "react-router-dom": "^7.10.1",
         "tailwind-merge": "^3.4.0",
-        "tailwindcss": "^4.1.17"
+        "tailwindcss": "^4.1.17",
+        "zustand": "^5.0.10"
     }
 }
