--- a/extension/package.json
+++ b/extension/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build --config vite.config.ts && vite build --config vite.config.content.ts && vite build --config vite.config.auth.ts && vite build --config vite.config.background.ts",
+        "build": "tsc && vite build --config vite.config.ts && vite build --config vite.config.content.ts && vite build --config vite.config.auth.ts && vite build --config vite.config.post-command.ts && vite build --config vite.config.background.ts",
         "lint": "eslint .",
         "preview": "vite preview"
     },
