--- a/server/package.json
+++ b/server/package.json
@@ -6,42 +6,49 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@types/react": "^19.2.7",
+        "@types/crypto-js": "^4.2.2",
+        "@types/js-cookie": "^3.0.6",
+        "@types/react": "^19.2.9",
         "@types/react-dom": "^19.2.3",
         "@vitejs/plugin-react": "^5.1.2",
-        "autoprefixer": "^10.4.22",
+        "autoprefixer": "^10.4.23",
         "axios": "^1.13.2",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.1",
+        "concurrently": "^9.2.1",
+        "laravel-vite-plugin": "^2.1.0",
         "shadcn-ui": "^0.9.5",
         "tw-animate-css": "^1.4.0",
         "typescript": "^5.9.3",
-        "vite": "^7.2.7"
+        "vite": "^7.3.1"
     },
     "dependencies": {
         "@radix-ui/react-alert-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-scroll-area": "^1.2.10",
         "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-slot": "^1.2.4",
-        "@tailwindcss/vite": "^4.1.17",
-        "@tanstack/react-query": "^5.90.16",
-        "@types/js-cookie": "^3.0.6",
+        "@tailwindcss/vite": "^4.1.18",
+        "@tanstack/react-query": "^5.90.20",
         "@types/luxon": "^3.7.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "crypto-js": "^4.2.0",
+        "embla-carousel-autoplay": "^8.6.0",
+        "embla-carousel-react": "^8.6.0",
+        "framer-motion": "^12.29.0",
         "hamburger-react": "^2.5.2",
-        "i18next": "^25.7.2",
+        "i18next": "^25.8.0",
         "i18next-browser-languagedetector": "^8.2.0",
         "js-cookie": "^3.0.5",
-        "lucide-react": "^0.556.0",
+        "lucide-react": "^0.563.0",
         "luxon": "^3.7.2",
-        "react": "^19.2.1",
-        "react-dom": "^19.2.1",
-        "react-i18next": "^16.4.0",
-        "react-intersection-observer": "^10.0.0",
-        "react-router-dom": "^7.10.1",
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3",
+        "react-i18next": "^16.5.3",
+        "react-intersection-observer": "^10.0.2",
+        "react-router-dom": "^7.13.0",
         "tailwind-merge": "^3.4.0",
-        "tailwindcss": "^4.1.17",
+        "tailwindcss": "^4.1.18",
+        "use-debounce": "^10.1.0",
         "zustand": "^5.0.10"
     }
 }
