--- a/server/composer.json
+++ b/server/composer.json
@@ -13,7 +13,8 @@
         "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.9",
         "mrgarest/echo-api": "^1.0",
-        "predis/predis": "^3.3"
+        "predis/predis": "^3.3",
+        "spatie/laravel-sitemap": "^7.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.6",
