--- a/server/package.json
+++ b/server/package.json
@@ -21,8 +21,12 @@
         "vite": "^7.3.1"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.2.2",
         "@radix-ui/react-alert-dialog": "^1.1.15",
+        "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-label": "^2.1.8",
+        "@radix-ui/react-popover": "^1.1.15",
         "@radix-ui/react-scroll-area": "^1.2.10",
         "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-slot": "^1.2.4",
@@ -42,13 +46,16 @@
         "lucide-react": "^0.563.0",
         "luxon": "^3.7.2",
         "react": "^19.2.3",
+        "react-day-picker": "^9.13.0",
         "react-dom": "^19.2.3",
+        "react-hook-form": "^7.71.1",
         "react-i18next": "^16.5.3",
         "react-intersection-observer": "^10.0.2",
         "react-router-dom": "^7.13.0",
         "tailwind-merge": "^3.4.0",
         "tailwindcss": "^4.1.18",
         "use-debounce": "^10.1.0",
+        "zod": "^4.3.6",
         "zustand": "^5.0.10"
     }
 }
