--- a/server/package.json
+++ b/server/package.json
@@ -49,6 +49,7 @@
         "react-day-picker": "^9.13.0",
         "react-dom": "^19.2.3",
         "react-hook-form": "^7.71.1",
+        "react-hot-toast": "^2.6.0",
         "react-i18next": "^16.5.3",
         "react-intersection-observer": "^10.0.2",
         "react-router-dom": "^7.13.0",
